[gd_scene load_steps=27 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://assets/body.png" type="Texture" id=2]
[ext_resource path="res://assets/intes.png" type="Texture" id=3]
[ext_resource path="res://assets/est.png" type="Texture" id=4]
[ext_resource path="res://assets/fig.png" type="Texture" id=5]
[ext_resource path="res://assets/pul.png" type="Texture" id=6]
[ext_resource path="res://assets/sys_uri.png" type="Texture" id=7]
[ext_resource path="res://mouse.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/PNG/green_button00.png" type="Texture" id=9]
[ext_resource path="res://assets/PNG/green_button01.png" type="Texture" id=10]
[ext_resource path="res://font_game1.tres" type="DynamicFontData" id=11]
[ext_resource path="res://assets/PNG/blue_panel.png" type="Texture" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 81.3541, 68.2382 )

[sub_resource type="CircleShape2D" id=2]
radius = 27.5944

[sub_resource type="CircleShape2D" id=3]
radius = 26.2322

[sub_resource type="CircleShape2D" id=4]
radius = 29.3509

[sub_resource type="CapsuleShape2D" id=5]
radius = 25.7903
height = 5.24911

[sub_resource type="CapsuleShape2D" id=6]
radius = 36.6407
height = 105.953

[sub_resource type="CapsuleShape2D" id=7]
radius = 36.6407
height = 83.0723

[sub_resource type="CapsuleShape2D" id=8]
radius = 7.15018
height = 206.993

[sub_resource type="CircleShape2D" id=9]
radius = 19.7058

[sub_resource type="DynamicFont" id=10]
size = 30
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=11]
size = 30
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=12]
size = 30
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=13]
size = 15
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=14]
size = 30
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 11 )

[node name="Main" type="Node2D"]
script = ExtResource( 1 )
main = "res://MainGame.tscn"
main_questions = "res://questions/main.json"

[node name="body" type="Sprite" parent="."]
self_modulate = Color( 0.952941, 0.819608, 0.662745, 1 )
position = Vector2( 242.003, 517.078 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="Orgaos" type="Node" parent="."]

[node name="Area_intestino" type="Area2D" parent="Orgaos" groups=[
"intestino",
]]
position = Vector2( 242.003, 517.078 )
scale = Vector2( 0.5, 0.5 )

[node name="intestino" type="TextureButton" parent="Orgaos/Area_intestino" groups=[
"intestino",
]]
margin_left = -153.0
margin_top = 66.0
margin_right = 795.0
margin_bottom = 1043.0
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 3 )
expand = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Orgaos/Area_intestino"]
position = Vector2( -9.48669, 207.653 )
shape = SubResource( 1 )

[node name="Area_estomago" type="Area2D" parent="Orgaos" groups=[
"estomago",
]]
editor/display_folded = true
position = Vector2( 242.003, 517.078 )
scale = Vector2( 0.5, 0.5 )

[node name="estomago" type="TextureButton" parent="Orgaos/Area_estomago" groups=[
"estomago",
]]
margin_left = -79.0
margin_top = -133.0
margin_right = 558.0
margin_bottom = 777.0
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 4 )
expand = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Orgaos/Area_estomago"]
position = Vector2( 8.43268, 72.515 )
rotation = 0.731472
shape = SubResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Orgaos/Area_estomago"]
position = Vector2( 77.0371, 17.9683 )
rotation = 0.731472
shape = SubResource( 3 )

[node name="Area_figado" type="Area2D" parent="Orgaos" groups=[
"figado",
]]
editor/display_folded = true
position = Vector2( 242.003, 517.078 )
scale = Vector2( 0.5, 0.5 )

[node name="figado" type="TextureButton" parent="Orgaos/Area_figado" groups=[
"figado",
]]
margin_left = -124.725
margin_top = -29.394
margin_right = 510.275
margin_bottom = 409.606
rect_scale = Vector2( 0.31, 0.31 )
texture_normal = ExtResource( 5 )
expand = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Orgaos/Area_figado"]
position = Vector2( -77.4748, 28.9872 )
shape = SubResource( 4 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Orgaos/Area_figado"]
position = Vector2( -8.65973, 8.03821 )
rotation = 1.35933
shape = SubResource( 5 )

[node name="Area_pulmao" type="Area2D" parent="Orgaos" groups=[
"pulmao",
]]
editor/display_folded = true
position = Vector2( 242.003, 517.078 )
scale = Vector2( 0.5, 0.5 )

[node name="pulmao" type="TextureButton" parent="Orgaos/Area_pulmao" groups=[
"pulmao",
]]
margin_left = -146.0
margin_top = -365.0
margin_right = 803.0
margin_bottom = 893.0
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 6 )
expand = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Orgaos/Area_pulmao"]
position = Vector2( -72.58, -111.033 )
rotation = 0.238571
shape = SubResource( 6 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Orgaos/Area_pulmao"]
position = Vector2( 71.8236, -107.973 )
rotation = -0.338984
shape = SubResource( 7 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Orgaos/Area_pulmao"]
position = Vector2( -4.28088, -249.718 )
shape = SubResource( 8 )

[node name="Area_ap_urina" type="Area2D" parent="Orgaos" groups=[
"ap_urina",
]]
editor/display_folded = true
position = Vector2( 242.003, 517.078 )
scale = Vector2( 0.5, 0.5 )

[node name="ap_urina" type="TextureButton" parent="Orgaos/Area_ap_urina" groups=[
"ap_urina",
]]
margin_left = -112.0
margin_top = 36.0
margin_right = 619.0
margin_bottom = 1042.0
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 7 )
expand = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Orgaos/Area_ap_urina"]
position = Vector2( -81.9074, 100.232 )
shape = SubResource( 9 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Orgaos/Area_ap_urina"]
position = Vector2( 81.164, 91.1779 )
shape = SubResource( 9 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Orgaos/Area_ap_urina"]
position = Vector2( -5.79745, 306.737 )
shape = SubResource( 9 )

[node name="mouse" parent="." instance=ExtResource( 8 )]

[node name="Start_btns" type="Node2D" parent="."]

[node name="btn_Play" type="Node2D" parent="Start_btns"]
position = Vector2( 147.328, 112.952 )

[node name="TextureButton" type="TextureButton" parent="Start_btns/btn_Play"]
margin_right = 40.0
margin_bottom = 40.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )

[node name="Label" type="Label" parent="Start_btns/btn_Play/TextureButton"]
margin_left = 55.8482
margin_top = 4.90559
margin_right = 128.848
margin_bottom = 38.9056
custom_fonts/font = SubResource( 10 )
text = "PLAY"

[node name="btn_Quit" type="Node2D" parent="Start_btns"]
position = Vector2( 147.328, 174.338 )

[node name="TextureButton" type="TextureButton" parent="Start_btns/btn_Quit"]
margin_right = 40.0
margin_bottom = 40.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )

[node name="Label" type="Label" parent="Start_btns/btn_Quit/TextureButton"]
margin_left = 60.3765
margin_top = 3.77353
margin_right = 127.376
margin_bottom = 37.7735
custom_fonts/font = SubResource( 11 )
text = "QUIT"

[node name="StrongBrainLogo" type="NinePatchRect" parent="Start_btns"]
margin_left = 28.0
margin_top = 27.0
margin_right = 450.0
margin_bottom = 94.0
texture = ExtResource( 12 )
region_rect = Rect2( 0.5, 0, 99.5, 99.5 )
patch_margin_left = 4
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 4

[node name="RichTextLabel" type="RichTextLabel" parent="Start_btns/StrongBrainLogo"]
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 108.0
margin_top = 14.0
margin_right = 333.0
margin_bottom = 54.0
custom_fonts/normal_font = SubResource( 12 )
text = "STRONG BRAIN"

[node name="Start_question" type="Node2D" parent="."]
visible = false

[node name="Question" type="NinePatchRect" parent="Start_question"]
margin_left = 28.0
margin_top = 27.0
margin_right = 450.0
margin_bottom = 94.0
texture = ExtResource( 12 )
region_rect = Rect2( 0.5, 0, 99.5, 99.5 )
patch_margin_left = 4
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 4

[node name="RichTextLabel" type="Label" parent="Start_question/Question"]
margin_left = 67.0
margin_top = 14.0
margin_right = 333.0
margin_bottom = 57.0
custom_fonts/font = SubResource( 13 )
text = "osaasdojbnasbafbsfbafbasfbafbafb"
align = 1
valign = 1
autowrap = true

[node name="choose" type="Label" parent="Start_question"]
margin_left = -10.3386
margin_top = 134.405
margin_right = 489.661
margin_bottom = 179.405
custom_fonts/font = SubResource( 14 )
text = "Choose an organ to start"
align = 1
valign = 1
uppercase = true

[connection signal="area_entered" from="Orgaos/Area_intestino" to="." method="_on_Area_intestino_area_entered"]
[connection signal="area_exited" from="Orgaos/Area_intestino" to="." method="_on_Area_intestino_area_exited"]
[connection signal="pressed" from="Orgaos/Area_intestino/intestino" to="." method="_on_intestino_pressed"]
[connection signal="area_entered" from="Orgaos/Area_estomago" to="." method="_on_Area_estomago_area_entered"]
[connection signal="area_exited" from="Orgaos/Area_estomago" to="." method="_on_Area_estomago_area_exited"]
[connection signal="pressed" from="Orgaos/Area_estomago/estomago" to="." method="_on_estomago_pressed"]
[connection signal="area_entered" from="Orgaos/Area_figado" to="." method="_on_Area_figado_area_entered"]
[connection signal="area_exited" from="Orgaos/Area_figado" to="." method="_on_Area_figado_area_exited"]
[connection signal="pressed" from="Orgaos/Area_figado/figado" to="." method="_on_figado_pressed"]
[connection signal="area_entered" from="Orgaos/Area_pulmao" to="." method="_on_Area_pulmao_area_entered"]
[connection signal="area_exited" from="Orgaos/Area_pulmao" to="." method="_on_Area_pulmao_area_exited"]
[connection signal="pressed" from="Orgaos/Area_pulmao/pulmao" to="." method="_on_pulmao_pressed"]
[connection signal="area_entered" from="Orgaos/Area_ap_urina" to="." method="_on_Area_ap_urina_area_entered"]
[connection signal="area_exited" from="Orgaos/Area_ap_urina" to="." method="_on_Area_ap_urina_area_exited"]
[connection signal="pressed" from="Orgaos/Area_ap_urina/ap_urina" to="." method="_on_ap_urina_pressed"]
[connection signal="pressed" from="Start_btns/btn_Play/TextureButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="Start_btns/btn_Quit/TextureButton" to="." method="_on_TextureButton_pressed"]
